//file:noinspection GroovyUntypedAccess
plugins {
    id 'java'
}

group = 'Craftworld'
version = '0.0.1'
description = 'Craft world!'

repositories {
    mavenCentral()
}

java {
    archivesBaseName = 'gradle-project'
    sourceCompatibility = JavaVersion.VERSION_17
}

jar {
    baseName('Craftworld')
    version('0.0.1')
    //noinspection GroovyAssignabilityCheck
    manifest() {
        attributes "Main-Class": 'Core.Craftworld'
        attributes "Class-Path": 'Craftworld/libraries/eventbus-java-3.3.1.jar;' +
                'Crafworld/libraries/commons-compress-1.21.jar;' +
                'Craftworld/libraries/xz-1.9.jar'
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:23.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

//    implementation 'org.greenrobot:eventbus-java:3.3.1'
    implementation fileTree(dir: 'lib', excludes: ['*-javadoc.jar', '*-sources.jar'], includes: ['*.jar'])
//    implementation 'cn.hutool:hutool-all:5.1.2'
//    implementation 'javassist:javassist:3.12.1.GA'

    implementation platform('org.lwjgl:lwjgl-bom:3.3.1')
    implementation 'org.lwjgl:lwjgl'
    implementation 'org.lwjgl:lwjgl-assimp'
    implementation 'org.lwjgl:lwjgl-bgfx'
    implementation 'org.lwjgl:lwjgl-cuda'
    implementation 'org.lwjgl:lwjgl-egl'
    implementation 'org.lwjgl:lwjgl-glfw'
    implementation 'org.lwjgl:lwjgl-jawt'
    implementation 'org.lwjgl:lwjgl-jemalloc'
    implementation 'org.lwjgl:lwjgl-libdivide'
    implementation 'org.lwjgl:lwjgl-llvm'
    implementation 'org.lwjgl:lwjgl-lmdb'
    implementation 'org.lwjgl:lwjgl-lz4'
    implementation 'org.lwjgl:lwjgl-meow'
    implementation 'org.lwjgl:lwjgl-meshoptimizer'
    implementation 'org.lwjgl:lwjgl-nanovg'
    implementation 'org.lwjgl:lwjgl-nfd'
    implementation 'org.lwjgl:lwjgl-nuklear'
    implementation 'org.lwjgl:lwjgl-odbc'
    implementation 'org.lwjgl:lwjgl-openal'
    implementation 'org.lwjgl:lwjgl-opencl'
    implementation 'org.lwjgl:lwjgl-opengl'
    implementation 'org.lwjgl:lwjgl-opengles'
    implementation 'org.lwjgl:lwjgl-openvr'
    implementation 'org.lwjgl:lwjgl-openxr'
    implementation 'org.lwjgl:lwjgl-opus'
    implementation 'org.lwjgl:lwjgl-ovr'
    implementation 'org.lwjgl:lwjgl-par'
    implementation 'org.lwjgl:lwjgl-remotery'
    implementation 'org.lwjgl:lwjgl-rpmalloc'
    implementation 'org.lwjgl:lwjgl-shaderc'
    implementation 'org.lwjgl:lwjgl-spvc'
    implementation 'org.lwjgl:lwjgl-sse'
    implementation 'org.lwjgl:lwjgl-stb'
    implementation 'org.lwjgl:lwjgl-tinyexr'
    implementation 'org.lwjgl:lwjgl-tinyfd'
    implementation 'org.lwjgl:lwjgl-tootle'
    implementation 'org.lwjgl:lwjgl-vma'
    implementation 'org.lwjgl:lwjgl-vulkan'
    implementation 'org.lwjgl:lwjgl-xxhash'
    implementation 'org.lwjgl:lwjgl-yoga'
    implementation 'org.lwjgl:lwjgl-zstd'
    final def lwjglNatives = 'natives-windows'
    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-bgfx::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-jemalloc::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-libdivide::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-llvm::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-lmdb::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-lz4::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-meow::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-meshoptimizer::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-nanovg::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-nfd::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-nuklear::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-opengles::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-openvr::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-openxr::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-opus::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-ovr::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-par::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-remotery::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-rpmalloc::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-shaderc::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-spvc::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-sse::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-tinyexr::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-tinyfd::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-tootle::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-vma::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-xxhash::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-yoga::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-zstd::$lwjglNatives"
    implementation 'org.lwjglx:lwjgl3-awt:0.1.8'
}

test {
    useJUnitPlatform()
}
